Minor manpage correction: vnacal_t -> vnacal_new_t
Fixed incorrect structure type in vnacal_new(3) man page.

--- a/src/vnacal_new.3
+++ b/src/vnacal_new.3
@@ -463,7 +463,7 @@ fails due to an insufficient number of standards.
 \fBvnacal_new_free\fP() frees the \fBvnacal_t\fP structure, the contained
 frequency vector, added measurements and error terms.
 Note that a call to \fBvnacal_free\fP() implicitly frees all associated
-\fBvnacal_t\fP structures; don't call \fBvnacal_new_free\fP() after
+\fBvnacal_new_t\fP structures; don't call \fBvnacal_new_free\fP() after
 calling \fBvnacal_free\fP().
 .\"
 .SS "Managing Measurement Error and Tolerance"
